crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__pipe_inside_quotes_not_split.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "\"a|b\""
        span:
          - 5
          - 13
    span:
      - 2
      - 17
    full_span:
      - 0
      - 21
