crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__pipe_inside_single_quotes.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "'a|b|c'"
        span:
          - 5
          - 15
    span:
      - 2
      - 19
    full_span:
      - 0
      - 23
