crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__trailing_pipe.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: value
    filters: []
    span:
      - 2
      - 8
    full_span:
      - 0
      - 12
