crates/djls-templates/src/snapshots/djls_templates__parser__tests__filter_parsing_tests__whitespace_preserved_in_spans.snap
---
source: crates/djls-templates/src/parser.rs
expression: convert_nodelist_for_testing(&nodelist)
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: filter1
        arg: ~
        span:
          - 11
          - 7
      - name: filter2
        arg: ~
        span:
          - 21
          - 7
    span:
      - 2
      - 27
    full_span:
      - 0
      - 31
